// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should render with all props assigned 1`] = `
<form
  className="form login-form"
>
  <p>
    Test
  </p>
</form>
`;

exports[`Form should render with required props 1`] = `
<form
  className="form"
>
  <p>
    Test
  </p>
</form>
`;
